k8s/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bizportal-api
  namespace: bizportal
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bizportal-api
  template:
    metadata:
      labels:
        app: bizportal-api
    spec:
      containers:
        - name: api
          image: ${ECR_REPO_URI}:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8090

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 25
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8090
            initialDelaySeconds: 45
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: bizportal-api-svc
  namespace: bizportal
spec:
  selector:
    app: bizportal-api
  ports:
    - name: http
      port: 80
      targetPort: 8090
  type: ClusterIP
